--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "@creditkarma/thrift-parser": "^1.2.0",
-    "big-integer": "^1.6.44"
+    "big-integer": "^1.6.44",
+    "thrift-ds": "1.1.0"
   },
   "devDependencies": {
     "@types/node": "^12.7.2",
